# comhad

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  tag.yml
assets/: README.md
assets/demo/: demo.tape  docker-compose.yml  down.sh  record.sh  seed-local.sh  seed.sh  up.sh
assets/demo/bookmarks/: exports-sync.json  localstack.json
docs/: configuration.md  usage.md
src/: app.rs  config.rs  fuzzy.rs  jobs.rs  keys.rs  lib.rs  local.rs  main.rs  s3.rs
src/app/: bookmarks.rs  browser.rs  clipboard.rs  confirm.rs  deep.rs  mod.rs  preview.rs  sort.rs  sync.rs
src/config/: mod.rs
src/input/: mod.rs
src/provider/: mod.rs  s3.rs
src/ui/: mod.rs  theme.rs
tests/: config_integration.rs
