[package]
name = "comhad"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Eóin McMahon <eoin.mcmahon.dev@gmail.com>"]
description = "A ranger-style terminal browser for S3, with multi-pane layout, previews, background transfers, and sync"
repository = "https://github.com/Eoin-McMahon/Comhad"
readme = "README.md"
license = "MIT"
keywords = ["s3", "tui", "ratatui", "file-manager", "aws"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["assets/", ".github/", ".claude/"]

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
async-trait = "0.1.83"
aws-config = "1.8.11"
aws-credential-types = "1.2.10"
aws-sdk-s3 = "1.109.0"
chrono = "0.4.45"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
humansize = "2.1.3"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
open = "5.3.6"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "0.9.9"
urlencoding = "2.1.3"
uuid = "1.23.4"
zip = "7.2.0"

[dev-dependencies]
tempfile = "3.15"
